--- a/futuro rico media query/indicacoes.html
+++ b/futuro rico media query/indicacoes.html
@@ -9,102 +9,138 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>  
 
 </head>
-<header>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">
-      <img src="img/Logogreenblack.svg" height="36">
-      </a>
-      <a class="navbar-brand" id="home" href="index.html">Futuro Rico</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="banco.html" id="navbar-banco">Banco</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="cartao.html">Cartão</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="controle_financeiro.html">Controle Financeiro</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="investimento.html">Investimento</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Tipo de investimento
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="renda_fixa.html">Renda Fixa</a>
-              </li>
-              <li><a class="dropdown-item" href="renda_variavel.html">Renda Variável</a>
-              </li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="simulador.html">Simulador</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="indicacoes.html">Indicações</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="sobre.html">Sobre</a>
-          </li>
-        </ul>
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">
+        <img src="img/Logogreenblack.svg" height="36">
+        </a>
+        <a class="navbar-brand" id="home" href="index.html">Futuro Rico</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="banco.html" id="navbar-banco">Banco</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="cartao.html">Cartão</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="controle_financeiro.html">Controle Financeiro</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="investimento.html">Investimento</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Tipo de investimento
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="renda_fixa.html">Renda Fixa</a>
+                </li>
+                <li><a class="dropdown-item" href="renda_variavel.html">Renda Variável</a>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="simulador.html">Simulador</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="indicacoes.html">Indicações</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="sobre.html">Sobre</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
-</header>
-    <main>
+    </nav>
+  </header>
+  <main>
     <div class="banner">
       <div class="banner-bg-indicacoes">
         <h1 class="display-1" id="titulo-banner">INDICAÇÕES</h1>
         <p class="lead" id="conteudo-banner">Para uma aprendizagem mais eficaz na gestão financeira, recomendamos alguns influenciadores que abordam o tema e podem auxiliá-lo a aprofundar seus conhecimentos.</p>
+      </div>
     </div>
-  </div>
-        <section class="content">
-            <h2 class="display-2" id="titulo-secundario">Thiago Nigro (Primo Rico)</h2>
-                <p class="lead">Com milhões de seguidores nas suas redes sociais, Thiago fala sobre
-                    investimentos e educação financeira em diversas plataformas. Ele explica que
-                    sua visão de investimentos começou a mudar radicalmente quando ganhou
-                    R$ 5 mil de aniversário de seus pais aos 18 anos.A partir daí, ele investiu na
-                    bolsa de valores e, com erros e acertos, iniciou seu processo de educador
-                    financeiro.</p>
-                    <p class="content-decoration">@thiago.nigro</p>
-            <h2 class="display-2" id="titulo-secundario">Nathalia Arcuri (Me Poupe)</h2>
-                <p class="lead">A jornalista Nathalia Arcuri é conhecida pelo seu canal de Youtube “Me
-                        Poupe”, um dos pioneiros no entretenimento financeiro e um dos maiores do
-                        mundo, com milhões de inscritos. Tanto em seu canal, quanto no Instagram
-                        ela fala sobre dicas de investimentos, planejamento financeiro e conceitos
-                        básicos para entender o mundo do dinheiro.</p>
-                <p class="content-decoration">@nathaliaarcur</p>
-            <h2 class="display-2" id="titulo-secundario">Bruno Perini (Você Mais Rico)</h2>
-                <p class="lead">O fundador do canal Você MAIS Rico Bruno Perini que começou tudo
-                        com um blog em 2013 e posteriormente, em 2016, virou também canal
-                        no YouTube. Ambos foram criados com a finalidade de aumentar a
-                        renda rumo ao 1 milhão. O canal possui mais de meio milhão de
-                        inscritos e Bruno também fala em seu onde foca principalmente na
-                        mudança da rotina e planejamentos mais inteligentes do patrimônio.</p>
-                <p class="content-decoration">@bruno_perini</p>
-            <h2 class="display-2" id="titulo-secundario">Charles Mendlowicz (Economista Sincero)</h2>
-                <p class="lead">O influenciador Charles Mendlowicz é conhecido como o “Economista
-                        Sincero” e vem se destacando por tratar assuntos da economia de forma
-                        direta.Com aproximadamente 528 mil seguidores no Instagram e 605 mil
-                        inscritos no youtube,ele tem como foco a educação financeira e fala de
-                        assuntos diversos, como investimentos, criptomoedas, trabalho e assuntos da
-                        economia em geral.</p>
-                <p class="content-decoration">@charles.wicz</p>
-            <h2 class="display-2" id="titulo-secundario">Nathalia Rodrigues (Nath Finanças)</h2>
-                <p class="lead">A influenciadora Nathalia Rodrigues fala em suas redes sociais onde
-                    conta com milhares de seguidores de “finanças reais para pessoas
-                    reais”. O seu público é voltado para pessoas que se preocupam mais
-                    com o pagamento das contas do fim do mês do que aquelas que têm
-                    milhares para investir.</p>
-                <p class="content-decoration">@nathfinancas</p>
-        </section>
-    </main>
+    <section class="content" id="section-pessoas">
+      <h2 class="display-2" id="titulo-secundario">Thiago Nigro</h2>
+      <div class="img-pessoas">  
+        <img src="./img/thiago nigro.jpg" class="img-fluid" alt="Responsive image">
+      </div>
+      <div class="lead-pessoas">
+        <p class="lead">Com milhões de seguidores nas suas redes sociais, Thiago fala sobre
+        investimentos e educação financeira em diversas plataformas. Ele explica que
+        sua visão de investimentos começou a mudar radicalmente quando ganhou
+        R$ 5 mil de aniversário de seus pais aos 18 anos.A partir daí, ele investiu na
+        bolsa de valores e, com erros e acertos, iniciou seu processo de educador
+        financeiro.</p>
+        <p class="content-decoration">
+          <a target="_blank" href="https://www.instagram.com/thiago.nigro/">@thiago.nigro</a>
+        </p>
+    </div>
+      <h2 class="display-2" id="titulo-secundario">Nathalia Arcuri</h2>
+      <div class="img-pessoas"> 
+        <img src="./img/nathalia arcuri.jpg" class="img-fluid" alt="Responsive image"> 
+      </div>
+      <div class="lead-pessoas">
+        <p class="lead">A jornalista Nathalia Arcuri é conhecida pelo seu canal de Youtube “Me
+          Poupe”, um dos pioneiros no entretenimento financeiro e um dos maiores do
+          mundo, com milhões de inscritos. Tanto em seu canal, quanto no Instagram
+          ela fala sobre dicas de investimentos, planejamento financeiro e conceitos
+          básicos para entender o mundo do dinheiro.</p>
+        <p class="content-decoration">
+          <a target="_blank" href="https://www.instagram.com/nathaliaarcuri/">@nathaliaarcuri</a>
+        </p>
+      </div>
+      <h2 class="display-2" id="titulo-secundario">Bruno Perini</h2>
+      <div class="img-pessoas"> 
+        <img src="./img/bruno perini.jpeg" class="img-fluid" alt="Responsive image"> 
+      </div>
+      <div class="lead-pessoas">
+        <p class="lead">O fundador do canal Você MAIS Rico Bruno Perini que começou tudo
+          com um blog em 2013 e posteriormente, em 2016, virou também canal
+          no YouTube. Ambos foram criados com a finalidade de aumentar a
+          renda rumo ao 1 milhão. O canal possui mais de meio milhão de
+          inscritos e Bruno também fala em seu onde foca principalmente na
+          mudança da rotina e planejamentos mais inteligentes do patrimônio.</p>
+        <p class="content-decoration">
+          <a target="_blank" href="https://www.instagram.com/bruno_perini/">@bruno_perini</a>
+        </p>
+      </div>
+      <h2 class="display-2" id="titulo-secundario">Charles Mendlowicz</h2>
+      <div class="img-pessoas"> 
+        <img src="./img/charles mendlowicz.jpg" class="img-fluid" alt="Responsive image"> 
+      </div>
+      <div class="lead-pessoas">
+        <p class="lead">O influenciador Charles Mendlowicz é conhecido como o “Economista
+          Sincero” e vem se destacando por tratar assuntos da economia de forma
+          direta.Com aproximadamente 528 mil seguidores no Instagram e 605 mil
+          inscritos no youtube,ele tem como foco a educação financeira e fala de
+          assuntos diversos, como investimentos, criptomoedas, trabalho e assuntos da
+          economia em geral.</p>
+        <p class="content-decoration">
+          <a target="_blank" href="https://www.instagram.com/charles.wicz/">@charles.wicz</a>
+        </p>
+      </div>
+      <h2 class="display-2" id="titulo-secundario">Nathalia Rodrigues</h2>
+      <div class="img-pessoas"> 
+        <img src="./img/nathalia rodrigues.jpg" class="img-fluid" alt="Responsive image"> 
+      </div>
+      <div class="lead-pessoas">
+        <p class="lead">A influenciadora Nathalia Rodrigues fala em suas redes sociais onde
+          conta com milhares de seguidores de “finanças reais para pessoas
+          reais”. O seu público é voltado para pessoas que se preocupam mais
+          com o pagamento das contas do fim do mês do que aquelas que têm
+          milhares para investir.</p>
+        <p class="content-decoration">
+          <a target="_blank" href="https://www.instagram.com/nathfinancas/">@nathfinancas</a>
+        </p>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
