--- a/futuro rico media query/sobre.html
+++ b/futuro rico media query/sobre.html
@@ -9,92 +9,155 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>  
 
 </head>
-<header>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">
-      <img src="img/Logogreenblack.svg" height="36">
-      </a>
-      <a class="navbar-brand" id="home" href="index.html">Futuro Rico</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="banco.html" id="navbar-banco">Banco</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="cartao.html">Cartão</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="controle_financeiro.html">Controle Financeiro</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="investimento.html">Investimento</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Tipo de investimento
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="renda_fixa.html">Renda Fixa</a>
-              </li>
-              <li><a class="dropdown-item" href="renda_variavel.html">Renda Variável</a>
-              </li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="simulador.html">Simulador</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="indicacoes.html">Indicações</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="sobre.html">Sobre</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-</header>
 <body>
+  <header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">
+        <img src="img/Logogreenblack.svg" height="36">
+        </a>
+        <a class="navbar-brand" id="home" href="index.html">Futuro Rico</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="banco.html" id="navbar-banco">Banco</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="cartao.html">Cartão</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="controle_financeiro.html">Controle Financeiro</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="investimento.html">Investimento</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Tipo de investimento
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="renda_fixa.html">Renda Fixa</a>
+                </li>
+                <li><a class="dropdown-item" href="renda_variavel.html">Renda Variável</a>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="simulador.html">Simulador</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="indicacoes.html">Indicações</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="sobre.html">Sobre</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
   <main>
     <div class="banner">
-      <div class="banner-bg-sobre">
+      <div class="banner-bg-indicacoes">
         <h1 class="display-1" id="titulo-banner">SOBRE</h1>
-          <p class="lead" id="conteudo-banner"></p>
+        <p class="lead" id="conteudo-banner">Somos um grupo formado por sete estudantes da FUNEC Riacho, unidos por uma visão comum: capacitar e educar as pessoas sobre o fascinante mundo do dinheiro. O Futuro Rico nasceu da paixão compartilhada por entender e dominar os princípios financeiros que impactam diretamente nossas vidas diárias.</p>
       </div>
     </div>
-    <div class="conteudo-principal" id="conteudo-pagina">
-      <section id="content">
-        <h2 class="display-2" id="titulo-secundario">BANCO DE VAREJO</h2>
-        <p class="lead">Um banco de varejo , também conhecido como banco comercial, é uma instituição
-        financeira que oferece uma variedade de serviços financeiros para indivíduos, famílias e
-        pequenas empresas, é um banco que realiza transações diretamente com os consumidores.
-        Os clientes podem abrir contas correntes e de poupança em um banco de varejo.</p>
-        <h2 class="display-2" id="titulo-secundario">BANCO DIGITAL</h2>
-        <p class="lead">Banco digital é uma instituição financeira que concede a maior parte de seus produtos e
-        serviços de forma online.Nessa situação, você pode acessar sua conta pelo computador ou
-        por um aplicativo no celular.Assim , consegue ver seu extrato bancário e realizar transações
-        financeiras a qualquer momento do dia.
-        Além disso, consegue abrir uma conta, enviar documentos , dados e até resolver problemas
-        com o banco por meio digital, isso é extremamente econômico uma vez que não é
-        necessário se deslocar até uma 
-        agência física , nem usar o telefone, na maioria das vezes.
-        </p>
-        <h2 class="display-2" id="titulo-secundario">BANCO PARA MENORES DE IDADE (-18 ANOS)</h2>
-        <p class="lead">Inter, Nubank, Next e o Original são exemplos de bancos digitais para menores de idades ,
-        ao acessar a conta temos muitas vantagens como investimento ,poupança entre outros
-        benefícios. É importante lembrar que , em geral, para abrir uma conta para menor de 18
-        anos, é necessário estar acompanhado dos pais ou responsáveis legais e apresentar
-        documentos como identidade e CPF.
-        </p>
-        <h2 class="display-2" id="titulo-secundario">BANCOS PARA MAIORES DE IDADE (+18 ANOS)</h2>
-        <p class="lead">A partir dos 18 anos a maior parte dos bancos já aceitam a criação de contas, a escolha de
-        qual banco criar uma conta vai da necessidade e preferência de cada adulto .</p>
-      </section>
+    <h2 class="display-2" id="titulo-secundario">Objetivo</h2>
+      <div>
+        <p class="lead">No Futuro Rico, acreditamos que o conhecimento sobre finanças é fundamental para o empoderamento individual. Nosso compromisso é proporcionar a você as ferramentas e informações necessárias para tomar decisões financeiras informadas e alcançar seus objetivos de maneira inteligente.</p>
     </div>
+    <section class="content" id="section-pessoas">
+      <h2 class="display-2" id="titulo-secundario">Nossa Equipe</h2>
+      <h3 class="display-2" id="titulo-secundario"> Pedro </h3>
+      <div class="img-pessoas"> 
+        <img src="./img/pedro.jpeg" class="img-fluid" alt="Responsive image"> 
+      </div>
+      <div class="lead-pessoas">
+        <p class="lead">Olá, sou Pedro Silva Pereira, um entusiasta de 17 anos com o sonho de seguir na área de sistemas de informação. Atuei como representante e fiquei responsável pelo design, programação em javascript e o andamento do projeto</p>
+        <p class="content-decoration">
+          <a target="_blank" href="https://www.instagram.com/pipow33/">@pipow33</a>
+        </p>
+      </div>
+      <h2 class="display-2" id="titulo-secundario">Bruno</h2>
+      <div class="img-pessoas"> 
+        <img src="./img/charles mendlowicz.jpg" class="img-fluid" alt="Responsive image"> 
+      </div>
+      <div class="lead-pessoas">
+        <p class="lead">Olá, sou Bruno Aires, tenho 17 anos de idade e pretendo atuar na área da tecnologia como um desenvolvedor back-end. Fui responsável pela estilização, marcação e responsividade do site.</p>
+        <p class="content-decoration">
+          <a target="_blank" href="https://www.instagram.com/bruno_perini/">@bruno_perini</a>
+        </p>
+      </div>
+      <h2 class="display-2" id="titulo-secundario">Rúbia</h2>
+      <div class="img-pessoas"> 
+        <img src="./img/nathalia arcuri.jpg" class="img-fluid" alt="Responsive image"> 
+      </div>
+      <div class="lead-pessoas">
+        <p class="lead">Olá, sou Rúbia Neiva da Costa, tenho 17 anos com destaque na área de pesquisa. Possuo dedicação e proatividade para alcançar objetivos, atuo como uma das pesquisadoras do site.</p>
+        <p class="content-decoration">
+          <a target="_blank" href="https://www.instagram.com/rubiineiva/">@rubiineiva</a>
+        </p>
+      </div>
+      <h2 class="display-2" id="titulo-secundario">Maria Luiza</h2>
+      <div class="img-pessoas"> 
+        <img src="./img/nathalia rodrigues.jpg" class="img-fluid" alt="Responsive image"> 
+      </div>
+      <div class="lead-pessoas">
+        <p class="lead">A influenciadora Nathalia Rodrigues fala em suas redes sociais onde
+          conta com milhares de seguidores de “finanças reais para pessoas
+          reais”. O seu público é voltado para pessoas que se preocupam mais
+          com o pagamento das contas do fim do mês do que aquelas que têm
+          milhares para investir.</p>
+        <p class="content-decoration">
+          <a target="_blank" href="https://www.instagram.com/nathfinancas/">@nathfinancas</a>
+        </p>
+      </div>
+      <h2 class="display-2" id="titulo-secundario">Melissa</h2>
+      <div class="img-pessoas"> 
+        <img src="./img/nathalia rodrigues.jpg" class="img-fluid" alt="Responsive image"> 
+      </div>
+      <div class="lead-pessoas">
+        <p class="lead">A influenciadora Nathalia Rodrigues fala em suas redes sociais onde
+          conta com milhares de seguidores de “finanças reais para pessoas
+          reais”. O seu público é voltado para pessoas que se preocupam mais
+          com o pagamento das contas do fim do mês do que aquelas que têm
+          milhares para investir.</p>
+        <p class="content-decoration">
+          <a target="_blank" href="https://www.instagram.com/nathfinancas/">@nathfinancas</a></p>
+      </div>
+      <h2 class="display-2" id="titulo-secundario">Leticia</h2>
+      <div class="img-pessoas"> 
+        <img src="./img/nathalia rodrigues.jpg" class="img-fluid" alt="Responsive image"> 
+      </div>
+      <div class="lead-pessoas">
+        <p class="lead">A influenciadora Nathalia Rodrigues fala em suas redes sociais onde
+          conta com milhares de seguidores de “finanças reais para pessoas
+          reais”. O seu público é voltado para pessoas que se preocupam mais
+          com o pagamento das contas do fim do mês do que aquelas que têm
+          milhares para investir.</p>
+        <p class="content-decoration">
+          <a target="_blank" href="https://www.instagram.com/nathfinancas/">@nathfinancas</a>
+        </p>
+      </div>
+      <h2 class="display-2" id="titulo-secundario">Bruna</h2>
+      <div class="img-pessoas"> 
+        <img src="./img/nathalia rodrigues.jpg" class="img-fluid" alt="Responsive image"> 
+      </div>
+      <div class="lead-pessoas">
+        <p class="lead">A influenciadora Nathalia Rodrigues fala em suas redes sociais onde
+          conta com milhares de seguidores de “finanças reais para pessoas
+          reais”. O seu público é voltado para pessoas que se preocupam mais
+          com o pagamento das contas do fim do mês do que aquelas que têm
+          milhares para investir.</p>
+        <p class="content-decoration">
+          <a target="_blank" href="https://www.instagram.com/nathfinancas/">@nathfinancas</a>
+        </p>
+      </div>
+    </section>
   </main>
 </body>
 </html>
